tests/format/misc/errors/js/import-assertions/invalid-flow-typeof-import-2.mjs
import module typeof foo from "./module.wasm";
